[tool.poetry]
name = "coin-bot"
version = "0.1.0"
description = "Slack bot to flip coins."
authors = ["enriquedlh97 <enriquedlh97@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "coin_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
slackclient = "^2.9.4"
slackeventsapi = "^3.0.1"
Flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
